<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="text1">Original Text</string>
    <string name="text2">New Text</string>
    <string name="describe">A module which helps you replace text with any text you want. Developed by liubaoyua.</string>
    <string name="app_name">Custom Text</string>
    <string name="app_loading">Now loading. Please wait...</string>
    <string name="app_searchhint">App name or package name</string>
    <string name="menu_settings">Settings</string>
    <string name="global_settings">Global Settings</string>
    <string name="moduleswitch">Module Switch</string>
    <string name="moduleswitch_summery">Enable / disable this module</string>
    <string name="menu_refresh">Refresh</string>
    <string name="menu_about">About</string>
    <string name="settings_apply_title">Apply settings</string>
    <string name="settings_apply_detail">Saved. It may take effect after relaunch the application. Kill the application now(root required)?</string>
    <string name="menu_launch">Launch App</string>
    <string name="menu_clear_current">Clear Current Page</string>
    <string name="menu_clear_all">Clear All Pages</string>
    <string name="current_page">Current page:</string>
    <string name="last_page">Previous page</string>
    <string name="next_page">Next page</string>
    <string name="menu_export">Export</string>
    <string name="menu_import">Import</string>
    <string name="imp_exp_file_doesnt_exist">Folder does not exist: %s</string>
    <string name="imp_exp_confirm">Import backup and overwrite all current settings?</string>
    <string name="imp_exp_exported">Settings exported to folder: %s</string>
    <string name="imp_exp_export_error">Export failed: %s</string>
    <string name="imp_exp_import_error">Import failed: %s</string>
    <string name="imp_exp_imported">Import successful; settings overwritten</string>
    <string name="title_activity_import_list">Select to import</string>
    <string name="settings_default">Default value</string>
    <string name="maxBackupNum_title">Max backup history</string>
    <string name="maxBackupNum_summary">Change the maximum number of backups</string>
    <string name="delete">Delete</string>
    <string name="ImageText">Extended Replacement</string>   
    <string name="ImageText_summery">Enable this option to replace text more deeply. It is for texts which may include emotion smileys, like chatting record of QQ. However, it may cause emojis to look abnormal.</string>
    <string name="about_author">Author: liubaoyua. Click to open my MicroBlog page.</string>
    <string name="module_function">Module Function</string>
    <string name="module_function_summary">It helps you replace texts such as: IDs, App names, carrier label, etc. Xposed required. If this module doesn\'t work, try to reactivate it in Xposed installer, and clear this app\'s data.</string>
    <string name="about_module">About Module</string>
    <string name="about_module_summary">It is made just for fun. Use it at your own risk. I am not responsible for what you do with it.</string>
    <string name="suggestion">Suggestions or Feedback</string>
    <string name="suggestion_summary">Any suggestion is welcome. Send it to liubaoyua@gmail.com. </string>
    <string name="XposedFrameworkBar"> A Chinese Xposed forum. Click to visit</string>
    <string name="refered_module">Referred Modules</string>
    <string name="refered_module1">mitchtech\'s XposedGroot</string>
    <string name="refered_module1_summary">Thank mitchtech and his project "XposedGroot", click to visit Github page.</string>
    <string name="refered_module2">GermainZ\'s Hodor</string>
    <string name="refered_module2_summary">Thank GermainZ and his project "Hodor", click to visit Github page.</string>
    <string name="refered_module3">rovo89\'s AppSettings</string>
    <string name="refered_module3_summary">Thank rovo89 and his project "AppSettings", click to visit Github page.</string> 
    <string name="translation">Translation</string>
    <string name="translation1">Russian Translation</string>
    <string name="translator1_summary">Thank @dvaleron for supplying Russian translation.</string> 
    <string name="menu_global_replacement">Global Replacement</string>
    <string name="menu_global_replacement_saved">Saved. Reboot to take effect.</string>
    <string name="backup_name">Input a backup name</string>
    <string name="backup_hint">Leave it empty to use current time as the backup name.</string>    
    <string name="menu_exit">Exit</string>
    <string name="translation2">German Translation</string>
    <string name="translator2_summary">Thank Nicolas Woelker for supplying German translation.</string> 
</resources>