<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/menu_save"
        android:icon="@android:drawable/ic_menu_save"
        android:showAsAction="always|withText"/>
    <item
        android:id="@+id/menu_app_launch"
        android:icon="@android:drawable/ic_media_play"
        android:showAsAction="withText"
        android:title="@string/menu_launch"/>
    <item
        android:id="@+id/menu_app_clear_current"
        android:icon="@android:drawable/ic_menu_manage"
        android:showAsAction="withText"
        android:title="@string/menu_clear_current"/>
    <item
        android:id="@+id/menu_app_clear_all"
        android:icon="@android:drawable/ic_menu_manage"
        android:showAsAction="withText"
        android:title="@string/menu_clear_all"/>

</menu>
