<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >
	
	<TableLayout 
	    android:id="@+id/tablelayout"
	    android:layout_width="fill_parent"
    	android:layout_height="wrap_content"
    	android:stretchColumns="0,1">
	
		<TableRow >
	        <EditText
                android:id="@+id/origintext0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text1"
                android:maxLines="1"
                android:singleLine="true" />
    		<EditText
                android:id="@+id/newtext0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text2"
                android:maxLines="1"
                android:singleLine="true" />
		</TableRow>
	    
	    <TableRow >
	   		<EditText
                android:id="@+id/origintext1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text1"
                android:maxLines="1"
                android:singleLine="true" />
    			<EditText
                android:id="@+id/newtext1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text2"
                android:maxLines="1"
                android:singleLine="true" />
	    </TableRow>
	    <TableRow >
	     	<EditText
                android:id="@+id/origintext2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text1"
                android:maxLines="1"
                android:singleLine="true" />
  			<EditText
                android:id="@+id/newtext2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text2"
                android:maxLines="1"
                android:singleLine="true" />
      </TableRow>
      <TableRow >
	    	<EditText
                android:id="@+id/origintext3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text1"
                android:maxLines="1"
                android:singleLine="true" />
  		  <EditText
                android:id="@+id/newtext3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text2"
                android:maxLines="1"
                android:singleLine="true" />
      </TableRow>
      <TableRow >
	     <EditText
                android:id="@+id/origintext4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text1"
                android:maxLines="1"
                android:singleLine="true" />
  		  <EditText
                android:id="@+id/newtext4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text2"
                android:maxLines="1"
                android:singleLine="true" />
      </TableRow>
      <TableRow >
	     <EditText
                android:id="@+id/origintext5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text1"
                android:maxLines="1"
                android:singleLine="true" />
  		  <EditText
                android:id="@+id/newtext5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text2"
                android:maxLines="1"
                android:singleLine="true" />
      </TableRow>
      <TableRow >
	     <EditText
                android:id="@+id/origintext6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text1"
                android:maxLines="1"
                android:singleLine="true" />
  		  <EditText
                android:id="@+id/newtext6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text2"
                android:maxLines="1"
                android:singleLine="true" />
      </TableRow>
      <TableRow >
	     <EditText
                android:id="@+id/origintext7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text1"
                android:maxLines="1"
                android:singleLine="true" />
  		  <EditText
                android:id="@+id/newtext7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text2"
                android:maxLines="1"
                android:singleLine="true" />
      </TableRow>
      <TableRow >
	     <EditText
                android:id="@+id/origintext8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text1"
                android:maxLines="1"
                android:singleLine="true" />
  		  <EditText
                android:id="@+id/newtext8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text2"
                android:maxLines="1"
                android:singleLine="true" />
      </TableRow>
      <TableRow >
	     <EditText
                android:id="@+id/origintext9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text1"
                android:maxLines="1"
                android:singleLine="true" />
  		  <EditText
                android:id="@+id/newtext9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/text2"
                android:maxLines="1"
                android:singleLine="true" />
      </TableRow>
      <TableRow >
      	<Button 
	        android:id="@+id/button1"
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/last_page"/>
	    <Button 
	  		android:id="@+id/button2"
	        android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/next_page"/>
      </TableRow>
      <TableRow>
	   	<TextView
	        android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/current_page"
            android:textColor="#0099CC"
            android:textSize="20sp" />
		<TextView 
          	android:id="@+id/pageview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="#0099CC"
            android:textSize="20sp" />
      </TableRow>
	</TableLayout>
</ScrollView>